--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -8,26 +8,18 @@
     tools:context=".home.view.fragment.AddUserFragment">
 
     <!-- Progress Bar Overlay -->
-    <LinearLayout
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/mainProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading_lottie_json" />
-        <!--        <pl.droidsonroids.gif.GifImageView-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:src="@drawable/loading_gif" />-->
-    </LinearLayout>
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_lottie_json" />
 
     <!-- Main Layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
